--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,14 @@
-<h1>Twitter Clone</h1>
-<p>
-  This is the home page for the
-  <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  Twitter Clone.
-</p>
+<div class="p-5 mb-4 bg-light rounded-3 center">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Welcome to the Twitter Clone</h1>
+    <p class="">
+      This is the home page for the
+      <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> Twitter Clone.
+    </p>
+    <div class="p-5 mb-4 bg-light rounded-3">
+      <%= link_to "Sign up now!", '#', class: "btn btn-primary btn-lg" %>
+    </div>
+  </div>
+</div>
+<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+                      "https://rubyonrails.org/" %>
