--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar fixed-top navbar-inverse bg-dark">
   <div class="container">
-    <%= link_to "Twitter Clone", '#', id: "logo" %>
+    <%= link_to "Twitter Clone", root_path, id: "logo" %>
     <nav>
       <ul class="nav">
-        <li class="nav-item"><%= link_to "Home", '#',class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Home", root_path,class: "nav-link" %></li>
         <li class="nav-item">
-          <%= link_to "Help", '#', class: "nav-link"%></li>
+          <%= link_to "Help", help_path, class: "nav-link"%></li>
         <li class="nav-item">
           <%= link_to "Log in", '#', class: "nav-link" %></li>
       </ul>
