--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,4 +1,9 @@
 /* universal */
+@import "bootstrap/scss/bootstrap";
+
+/* mixins, variables, etc. */
+
+/* universal */
 
 body {
   padding-top: 100px;
@@ -7,14 +12,16 @@ body {
 section {
   overflow: auto;
 }
+
 textarea {
   resize: vertical;
 }
+
 .center {
   text-align: center;
-}
-.center h1 {
-  margin-bottom: 10px;
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -27,7 +34,6 @@ h5,
 h6 {
   line-height: 1;
 }
-
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
@@ -41,9 +47,8 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $gray-200;
 }
-
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -55,17 +60,15 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
+  color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-  text-decoration: none;
-}
-
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
+  &:hover {
+    color: #a91401;
+    text-decoration: none;
+  }
 }
 
 /* footer */
@@ -73,28 +76,11 @@ p {
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #777;
-}
-
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
+  color: $gray-200;
+  a {
+    color: $gray-400;
+    &:hover {
+      color: $gray-500;
+    }
+  }
 }
