--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,10 +2,10 @@
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item">
-        <%= link_to "About", '#', class: "nav-link px-2 text-muted" %>
+        <%= link_to "About", about_path, class: "nav-link px-2 text-muted" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Contact", '#', class: "nav-link px-2 text-muted" %>
+        <%= link_to "Contact", contact_path, class: "nav-link px-2 text-muted" %>
       </li>
       <li class="nav-item"><a href="https://news.railstutorial.org/" class="nav-link px-2 text-muted">News</a></li>
     </ul>
