--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "Contact") %>
-<h1>Contact</h1>
-<p>
-  Contact the Ruby on Rails Tutorial about the Twitter Clone at the
-  <a href="https://www.railstutorial.org/contact">contact page</a>.
-</p>
+<div class="container center">
+  <h1>Contact</h1>
+  <p>
+    Contact the Ruby on Rails Tutorial about the Twitter Clone at the
+    <a href="https://www.railstutorial.org/contact">contact page</a>.
+  </p>
+</div>
