--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
       <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> Twitter Clone.
     </p>
     <div class="p-5 mb-4 bg-light rounded-3">
-      <%= link_to "Sign up now!", '#', class: "btn btn-primary btn-lg" %>
+      <%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg" %>
     </div>
   </div>
 </div>
