feat: authentication logic

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
 }
 
+
 /* miscellaneous */
 
 .debug_dump {
@@ -19,9 +20,6 @@
 }
 /* universal */
 
-body {
-  padding-top: 100px;
-}
 
 section {
   overflow: auto;
@@ -98,6 +96,27 @@ footer {
     }
   }
 }
+
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+
+    ul {
+      float: none;
+      padding: 0;
+
+      li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
+
 
 /* sidebar */
 
