--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,35 @@
-<header class="navbar fixed-top navbar-inverse bg-dark">
-  <div class="container">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
     <%= link_to "Twitter Clone", root_path, id: "logo" %>
-    <nav>
-      <ul class="nav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item"><%= link_to "Home", root_path,class: "nav-link" %></li>
         <li class="nav-item">
           <%= link_to "Help", help_path, class: "nav-link"%></li>
-        <li class="nav-item">
-          <%= link_to "Log in", '#', class: "nav-link" %></li>
+        <% if logged_in? %>
+          <li class="nav-item"><%= link_to "Users", "#",class: "nav-link" %></li>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Account
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
+                <li><%= link_to "Profile", current_user, class: "dropdown-item"%></li>
+                <li><%= link_to "Settings", "#", class: "dropdown-item" %></li>
+                <li><hr class="dropdown-divider dropdown-divider-dark"></li>
+                <li>
+                  <%= link_to "Log out", logout_path, method: "delete", class:"dropdown-item" %>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        <% else %>
+          <li><%= link_to "Log in", login_path, class: "nav-link" %></li>
+        <% end %>
       </ul>
-    </nav>
+    </div>
   </div>
-</header>
+</nav>
