--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= render 'layouts/rails_default' %>
     <%= javascript_importmap_tags %>
     <%= render 'layouts/shim' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <%= render 'layouts/header' %>
