--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
                 <li><%= link_to "Settings", "#", class: "dropdown-item" %></li>
                 <li><hr class="dropdown-divider dropdown-divider-dark"></li>
                 <li>
-                  <%= link_to "Log out", logout_path, method: "delete", class:"dropdown-item" %>
+                  <%= link_to "Log Out", logout_path,data: { "turbo-method": :delete }, class:"dropdown-item" %>
                 </li>
               </ul>
             </li>
