--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Sign up') %>
 <div class="container-sm">
   <h1>Sign up</h1>
-  <%= form_with(model: @user, local: true) do |f| %>
+  <%= form_with(model: @user, local: true, data: { turbo: false }) do |f| %>
     <%= render 'shared/error_messages' %>
     <div class="mb-3 ">
       <%= f.label :name, "Name", class: "form-label" %>
